app/assets/css/tailwind.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');

@import 'tailwindcss';
@import 'tw-animate-css';
@plugin '@tailwindcss/typography';

@custom-variant dark (&:is(.dark *));

@theme inline {
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-secondary-foreground-quiet: var(--color-slate-400);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent-primary: var(--color-purple-100);
  --color-accent-primary-foreground: var(--color-purple-700);

  --color-base: var(--color-slate-50);
  --color-base-foreground: var(--color-slate-700);
  --color-base-foreground-loud: var(--color-slate-800);
  --color-base-foreground-quiet: var(--color-slate-600);
  --color-base-foreground-extra-quiet: var(--color-slate-400);
  --color-muted-foreground-quiet: var(--color-slate-400);

  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);

  --color-bni-background: var(--color-white);
  --color-bni-border-loud: var(--color-slate-500);
  --color-bni-border: var(--color-slate-200);
  --color-bni-input: var(--color-slate-100);
  --color-bni-ring: var(--color-purple-400);

  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  /* App Colors */

  --color-default: var(--color-slate-600);
  --color-default-muted: var(--color-slate-100);
  --color-default-bold: var(--color-slate-700);

  --color-action: var(--color-blue-600);
  --color-action-muted: var(--color-blue-100);
  --color-action-bold: var(--color-blue-700);

  --color-information: var(--color-purple-600);
  --color-information-muted: var(--color-purple-100);
  --color-information-bold: var(--color-purple-700);

  --color-success: var(--color-emerald-600);
  --color-success-muted: var(--color-emerald-100);
  --color-success-bold: var(--color-emerald-700);

  --color-warning: var(--color-amber-600);
  --color-warning-muted: var(--color-amber-100);
  --color-warning-bold: var(--color-amber-700);

  --color-destructive: var(--destructive);
  --color-destructive-muted: var(--color-red-100);
  --color-destructive-bold: var(--color-red-700);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);
  --font-heading: var(--font-sans);
}

:root {
  --radius: 0.625rem;
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --destructive-foreground: oklch(1 0 0);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
  --font-sans:
    ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
  --font-mono:
    ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
    monospace;
  --shadow-x: 0;
  --shadow-y: 1px;
  --shadow-blur: 3px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.1;
  --shadow-color: oklch(0 0 0);
  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 2px 4px -1px hsl(0 0% 0% / 0.1);
  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 4px 6px -1px hsl(0 0% 0% / 0.1);
  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
  --tracking-normal: 0em;
  --spacing: 0.25rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --destructive-foreground: oklch(0.985 0 0);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
  --font-sans:
    ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
  --font-mono:
    ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
    monospace;
  --radius: 0.625rem;
  --shadow-x: 0;
  --shadow-y: 1px;
  --shadow-blur: 3px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.1;
  --shadow-color: oklch(0 0 0);
  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 2px 4px -1px hsl(0 0% 0% / 0.1);
  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 4px 6px -1px hsl(0 0% 0% / 0.1);
  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
}

@utility text-display-xl {
  font-size: var(--text-8xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-display-lg {
  font-size: var(--text-7xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-display-md {
  font-size: var(--text-6xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-display-sm {
  font-size: var(--text-5xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}

@utility text-heading-xl {
  font-size: var(--text-4xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-heading-lg {
  font-size: var(--text-3xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-heading-md {
  font-size: var(--text-2xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-heading-sm {
  font-size: var(--text-xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-heading-xs {
  font-size: var(--text-lg);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}

@utility text-body-xlEm {
  font-size: var(--text-xl);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-xl {
  font-size: var(--text-xl);
  font-weight: 400;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-lgEm {
  font-size: var(--text-lg);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-lg {
  font-size: var(--text-lg);
  font-weight: 400;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-mdEm {
  font-size: var(--text-base);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-md {
  font-size: var(--text-base);
  font-weight: 400;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-smEm {
  font-size: var(--text-sm);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-sm {
  font-size: var(--text-sm);
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-xsEm {
  font-size: var(--text-xs);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-body-xs {
  font-size: var(--text-xs);
  font-weight: 400;
  letter-spacing: 0;
  font-family: var(--font-sans);
}

@utility text-action-lg {
  font-size: var(--text-lg);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-action-md {
  font-size: var(--text-md);
  letter-spacing: 0;
  font-family: var(--font-sans);
}
@utility text-action-sm {
  font-size: var(--text-sm);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}

@utility text-action-xs {
  font-size: var(--text-xs);
  font-weight: 600;
  letter-spacing: 0;
  font-family: var(--font-sans);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

